# DSQ-Config

./: CMakeLists.txt  IniSyntaxHighlighter.cpp  IniSyntaxHighlighter.h  README.md  emulatorutils.cpp  emulatorutils.h  mainwindow.cpp  mainwindow.cpp.bak  mainwindow.h  mainwindow.ui  moc_IniSyntaxHighlighter.cpp  settings.ini
.github/workflows/: build.yml  windows.yml
cmake/Qt6/: Qt6Config.cmake  Qt6WidgetsConfig.cmake  qt_tool_stub.py
tests/: test_export.py
